add generate fake data

--- a/like/templates/_base.html
+++ b/like/templates/_base.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
   {% block title %}<title>{% block page_title %}{% endblock %} - 立刻 Like</title>{% endblock %}
   <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='semantic-ui/semantic.min.css') }}">
+  {% block head %}
+  {% endblock %}
 </head>
 <body>
-
+  {% block body %}
+  {% endblock %}
 </body>
 </html>
