--- a/like/templates/_base.html
+++ b/like/templates/_base.html
@@ -47,7 +47,10 @@
 </body>
 {% block scripts %}
   {{ render_static('js', 'js/jquery.min.js') }}
+{#  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>#}
+{#  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.map"></script>#}
   {{ render_static('js', 'semantic-ui/semantic.min.js') }}
   {{ render_static('js', 'js/common.js') }}
+  {{ render_static('js', 'js/moment-with-locales.min.js') }}
 {% endblock %}
 </html>
