初步完成用户注册，待完善验证码功能

--- a/like/static/css/common.css
+++ b/like/static/css/common.css
@@ -72,6 +72,10 @@ body {
     cursor: pointer;
 }
 
+.hot-comment {
+    font-size: 1em!important;
+}
+
 .sm-content {
     width: 296px;
     height: 500px;
