--- a/like/templates/api/post.html
+++ b/like/templates/api/post.html
@@ -2,7 +2,7 @@
   <div class="ui card orange">
     <div class="content">
       <div class="right floated meta">{{ moment(post.create_time).fromNow() }}</div>
-      <div class="header">{{ post.topic.name }}</div>
+      <div class="header">#{{ post.topic.name }}</div>
       <div class="description">
         <p>{{ post.content }}</p>
       </div>
@@ -13,5 +13,11 @@
       <span class="left floated star"><i class="comment icon"></i>{{ post.comments|length }}条评论</span>
       <div class="right floated author">{{ post.creator.username }}</div>
     </div>
+      {% if post.comments|length > 0 %}
+    <div class="extra content hot-comment" data-post-id="{{ post.id }}">
+      <p>热门评论</p>
+      <p>{{ post.comments[0].creator.username }}：{{ post.comments[0].content }}</p>
+    </div>
+      {% endif %}
   </div>
 {% endfor %}
