--- a/like/templates/api/post.html
+++ b/like/templates/api/post.html
@@ -9,7 +9,7 @@
         </a>
       </div>
     </div>
-    <div class="extra content post-actions">
+    <div class="extra content actions">
       <span class="left floated like"><i class="like icon"></i>赞</span>
       <span class="left floated star"><i class="star icon"></i>收藏</span>
       <span class="left floated star"><i class="comment icon"></i>{{ post.comments|length }}条评论</span>
