--- a/like/templates/api/post.html
+++ b/like/templates/api/post.html
@@ -1,29 +1,5 @@
+{% from '_macros.html' import render_post_card with context %}
+
 {% for post in posts %}
-  <div class="ui card orange">
-    <div class="content">
-      <div class="right floated meta">{{ moment(post.create_time).fromNow() }}</div>
-      <div class="header">#{{ post.topic.name }}</div>
-      <div class="description">
-        <a href="{{ url_for('front.post', post_id=post.id) }}">
-          <p>{{ post.content }}</p>
-        </a>
-      </div>
-    </div>
-    <div class="extra content actions">
-      <span class="left floated like"><i class="like icon"></i>赞</span>
-      <span class="left floated star"><i class="star icon"></i>收藏</span>
-      <span class="left floated star"><i class="comment icon"></i>{{ post.comments|length }}条评论</span>
-      <div class="right floated author">{{ post.creator.username }}</div>
-    </div>
-    {% if post.comments|length > 0 %}
-      <div class="extra content hot-comment" data-post-id="{{ post.id }}">
-        <a href="{{ url_for('front.post', post_id=post.id, _anchor='post-comments') }}">
-          <p class="header">热门评论</p>
-          {% set comment = post.get_hot_comments() %}
-          <div class="right floated meta">{{ comment.liked_users|length }}人赞了该评论</div>
-          <p>{{ comment.creator.username }}：{{ comment.content }}</p>
-        </a>
-      </div>
-    {% endif %}
-  </div>
+  {{ render_post_card(post) }}
 {% endfor %}
