修复热评与所有评论不同步的问题

--- a/like/templates/_macros.html
+++ b/like/templates/_macros.html
@@ -69,7 +69,7 @@
           {% endif %}
           <span class="count">{{ comment.liked_users|length }}</span>
         </span>
-        <span class="comment-comment to-bind" data-action="commentComment" data-id="{{ comment.id }}">
+        <span class="comment-comment to-bind" data-action="commentComment">
           <i class="comment icon"></i>
         </span>
       </div>
