--- a/like/templates/front/post.html
+++ b/like/templates/front/post.html
@@ -96,7 +96,7 @@
   {{ super() }}
   <script>
       var stream_type = "comment";
-      var topic_id = null;
+      var topic_id = {{ post.topic.id|int }};
       var post_id = {{ post.id|int }};
   </script>
 {% endblock %}
