--- a/like/templates/front/post.html
+++ b/like/templates/front/post.html
@@ -98,5 +98,6 @@
       var stream_type = "comment";
       var topic_id = {{ post.topic.id|int }};
       var post_id = {{ post.id|int }};
+      var user_id = null;
   </script>
 {% endblock %}
