--- a/like/templates/front/topic.html
+++ b/like/templates/front/topic.html
@@ -43,5 +43,6 @@
       var stream_type = "post";
       var topic_id = {{ topic.id|int }};
       var post_id = null;
+      var user_id = null;
   </script>
 {% endblock %}
