--- a/like/templates/front/new_post.html
+++ b/like/templates/front/new_post.html
@@ -20,3 +20,11 @@
   </div>
   </form>
 {% endblock %}
+
+{% block scripts %}
+  {{ super() }}
+  <script>
+  var topic = {{ topic_id }}
+  $("option[value='"+topic+"']").attr("selected", "1");
+  </script>
+{% endblock %}
