--- a/like/templates/front/_base_front.html
+++ b/like/templates/front/_base_front.html
@@ -21,6 +21,12 @@
           </a>
         </div>
         <div class="item action-item">
+          <a href="{{ url_for('front.new_topic') }}">
+              <i class="hashtag icon"></i>
+            <div class="item">主题</div>
+          </a>
+        </div>
+        <div class="item action-item">
               <i class="comments icon"></i>
             <div class="item">讨论</div>
         </div>
