--- a/like/templates/user/_base_user.html
+++ b/like/templates/user/_base_user.html
@@ -23,3 +23,8 @@
     </div>
   </div>
 {% endblock %}
+
+{% block scripts %}
+  {{ super() }}
+  {{ render_static('js', 'js/user.js') }}
+{% endblock %}
