--- a/like/templates/front/_base_front.html
+++ b/like/templates/front/_base_front.html
@@ -30,12 +30,12 @@
               <i class="comments icon"></i>
             <div class="item">讨论</div>
         </div>
-        <div class="item action-item">
-          <a href="{{ url_for('user.index', user_id=current_user.id) }}">
-              <i class="home icon"></i>
-            <div class="item">主页</div>
-          </a>
-        </div>
+{#        <div class="item action-item">#}
+{#          <a href="{{ url_for('user.index', user_id=current_user.id) }}">#}
+{#              <i class="home icon"></i>#}
+{#            <div class="item">主页</div>#}
+{#          </a>#}
+{#        </div>#}
         <div class="item action-item">
               <i class="cog icon"></i>
             <div class="item">设置</div>
